test: optimizacion de los test de venta-service